--- a/style.css
+++ b/style.css
@@ -19,8 +19,10 @@
             border: 1px solid #334155;
             max-width: 400px;
         }
+        
         h1 { color: #e09027; margin-bottom: 10px; }
         p { line-height: 1.6; color: #94a3b8;}
+
         .botao {
             display: inline-block;
             margin-top: 20px;
@@ -66,4 +68,51 @@
         .botao:hover{
             filter: brightness(1);
             transform: translateY(-2px);
+        }
+
+        
+        /* "SE" a tela for menor ou igual a 600px (celular)... */
+        @media (max-width: 600px) {
+            body {
+                background-color: lightgreen; /* A mágica acontece aqui dentro */
+            }
+        }
+
+        .botao-desafio {
+            width: 300px;
+            background-color: blue;
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #38bdf8;
+            color: #0f172a;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: 0.3s;
+        
+        }
+
+        .botao-desafio {
+            padding: 14px;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: bold;
+            color: white;
+            transition: 0.3s;
+        }
+        
+        @media (max-width: 480px) {
+        /* Ajustando o card para não ficar apertado no celular */
+            .card {
+                padding: 1.5rem;
+                max-width: 90%;
+            }
+
+        /* O botão agora ocupa a largura da tela, estilo App moderno */
+            .botao-desafio {
+                width: 100%; 
+                color: white;
+                background-color: #23d366; /* Verde do Zap */
+            }
         }
